# godbc

./: .gitignore  .windsurfrules  CMakeLists.txt  Dockerfile  Dockerfile.darwin  Dockerfile.darwin-arm64  Dockerfile.rhel7  Dockerfile.windows  README.md  build-darwin-arm64.sh  build-darwin.sh  build-rhel7.sh  build-windows.sh  connection.go  driver.go  errors.go  go.mod  go.sum  odbc.ini
.github/workflows/: cmake-multi-platform.yml
bridge/: bridge.go  bridge.h  bridge_types.h  go.mod  libgodbc.h  mssql.go
cpp/: godbc.hpp
examples/: benchmark.cpp  example.cpp  query_examples.cpp  sql_runner.cpp
mssql/: connection.go  driver.go  pool.go
sql/: query1.sql  query2.sql  query3.sql
